@@ -1,9 +1,10 @@
-$Id: ChangeLog 3995 2014-10-06 13:51:04Z chrfranke $
+$Id: ChangeLog 3996 2014-10-06 14:47:28Z chrfranke $
 
 2014-10-06  Christian Franke  <franke@computer.org>
 
 	ataprint.cpp: Add form factors from ACS-4.
-	Add ACS-2 and ACS-3 minor versions.  Add SATA 3.2.
+	Add ACS-2 and ACS-3 minor versions.
+	Update SATA log names.  Add SATA 3.2.
 
 2014-10-06  Alex Samorukov  <samm@os2.kiev.ua>
 
